--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
             h1 {
                 font-size: 5rem;
                 text-align: center;
+                text-transform: capitalize;
+            }
+            word-spinner {
+                border-bottom: .1em dashed;
+                cursor: pointer;
+            }
+            word-spinner:hover {
+                border-bottom-style: solid;
             }
             @media (min-width: 30rem) {
                 h1 {
@@ -32,6 +40,8 @@
         </style>
     </head>
     <body>
-        <h1>Bri Is Dumb</h1>
+        <h1>Bri is <word-spinner choices="dumb idiotic foolish terrible evil sneaky horrible annoying beautiful silly lazy crazy uncouth disastrous smelly cancelled problematic">dumb</word-spinner></h1>
+
+        <script type="module" src="js/word-spinner.js"></script>
     </body>
 </html>
