--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <body>
         <h1>Bri is <word-spinner choices="dumb idiotic foolish terrible evil sneaky horrible annoying beautiful silly lazy crazy uncouth disastrous smelly cancelled problematic">dumb</word-spinner></h1>
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/2.2.10/webcomponents-bundle.js"></script>
         <script type="module" src="js/word-spinner.js"></script>
     </body>
 </html>
