Miles is also heartbroken

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </style>
     </head>
     <body>
-        <h1>Miles is <word-spinner choices="dumb idiotic foolish terrible evil sneaky horrible annoying beautiful silly lazy crazy uncouth disastrous smelly cancelled problematic">dumb</word-spinner></h1>
+        <h1>Miles is <word-spinner choices="dumb idiotic foolish terrible evil sneaky horrible annoying heartbroken silly lazy crazy uncouth disastrous smelly cancelled problematic">dumb</word-spinner></h1>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/2.2.10/webcomponents-bundle.js"></script>
         <script type="module" src="js/word-spinner.js"></script>
